--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-knobs": "^5.2.4",
     "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-notes": "^5.2.4",
     "@storybook/addons": "^5.2.1",
     "@storybook/vue": "^5.2.1",
     "@types/jest": "^23.1.4",
