--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "koawach-redesign",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
